7-grafana/templates/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    -  http:
        paths:
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
